# experiments

llmscrape/: main.py  pyproject.toml
llmscrape/scrapper/: __init__.py  reflection_workflow.py  structured_accumulate.py
vault/: .gitignore  REAMD.md  client.mjs  docker-compose.yaml  main.mjs  package.json
